# picolator

./: .gitlab-ci.yml  CMakeLists.txt  LCD1602.cpp  LCD1602.h  LICENSE  Makefile  TODO  button.cpp  calculator_state.h  callbacks.cpp  callbacks.h  larrys_calculator.cpp
larrys_pico/: CMakeLists.txt  LCD1602.cpp
larrys_pico/include/larrys_pico/: LCD1602.h  button.h  button_matrix.h
larrys_pico/src/: LCD1602.cpp  button.cpp
math/: binanry_operator.h  binary_operator.h  bracket.h  expr_tree.cpp  expr_tree.h  function.h  letter.h  literals.cpp  literals.h  literals_piece.h  math_util.cpp  math_util.h  unary_operator.cpp  unary_operator.h
test/: CMakeLists.txt  test_expr_tree.cpp  test_literals.cpp  test_unary_operator.cpp
